infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: satoshi-auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: satoshi-auth
  template:
    metadata:
      labels:
        app: satoshi-auth
    spec:
      containers:
        - name: satoshi-auth
          image: chihweidavidliu/satoshi-auth
---
apiVersion: v1
kind: Service
metadata:
  name: satoshi-auth-srv
spec:
  selector:
    app: satoshi-auth
  type: ClusterIP
  ports:
    - name: satoshi-auth
      protocol: TCP
      port: 3000
      targetPort: 3000
