infra/k8s/enrolment-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: satoshi-enrolment-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: satoshi-enrolment
  template:
    metadata:
      labels:
        app: satoshi-enrolment
    spec:
      containers:
        - name: satoshi-enrolment
          image: chihweidavidliu/satoshi-enrolment
---
apiVersion: v1
kind: Service
metadata:
  name: satoshi-enrolment-srv
spec:
  selector:
    app: satoshi-enrolment
  type: ClusterIP
  ports:
    - name: satoshi-enrolment
      protocol: TCP
      port: 3000
      targetPort: 3000
