infra/k8s/programs-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: satoshi-programs-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: satoshi-programs
  template:
    metadata:
      labels:
        app: satoshi-programs
    spec:
      containers:
        - name: satoshi-programs
          image: chihweidavidliu/satoshi-programs
---
apiVersion: v1
kind: Service
metadata:
  name: satoshi-programs-srv
spec:
  selector:
    app: satoshi-programs
  type: ClusterIP
  ports:
    - name: satoshi-programs
      protocol: TCP
      port: 3000
      targetPort: 3000
